# GW-workshop-test-repo

./: README.md  environment.yml  main.py  pyproject.toml  road_to_TLJH.md
notebooks/: 001_introduction.ipynb
