[project]
name = "gw-workshop-test-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens==3.0.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "fonttools==4.58.4",
    "ipykernel==6.29.5",
    "ipython==8.37.0",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "numpy==2.2.6",
    "packaging==25.0",
    "parso==0.8.4",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pywin32==310; sys_platform == 'win32'",
    "pyzmq==27.0.0",
    "ruff==0.12.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.1",
    "traitlets==5.14.3",
    "typing-extensions==4.14.0",
    "wcwidth==0.2.13",
    "geopandas>=0.14.0",
    "pykrige>=1.7.0",
    "pandas>=2.0.0",
    "folium>=0.20.0",
    "ffmpeg-python>=0.2.0",
    "imageio-ffmpeg>=0.6.0",
    "imageio>=2.37.0",
    "plotly>=6.2.0",
    "openpyxl",
    "scalebar>=0.5.2",
    "matplotlib-scalebar>=0.9.0",
    "rasterio>=1.4.3",
    "nbformat>=5.10.4",
    "geopy>=2.4.1",
    "seaborn>=0.13.0",
    "ipywidgets>=8,<9",
]
